Fixed offscreen class for screenreaders

--- a/css/block.css
+++ b/css/block.css
@@ -85,6 +85,7 @@
 .resultItem {
     display: flex;
     flex-direction: column;
+    font-size: 1rem;
     margin-bottom: 2rem;
 }
 
@@ -93,7 +94,7 @@
 }
     .resultTitle a {
         text-decoration: none;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         color: var(--accent-clr);
         line-height: 1.5rem;
     }
